compiler-core/src/parse/snapshots/gleam_core__parse__tests__bit_array_invalid_segment.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:53
  │
3 │     <<72, 101, 108, 108, 111, 44, 32, 74, 111, 101, const>>
  │                                                     ^^^^^ I was not expecting this

Expected one of: 
">>"
a bit array segment
